// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of Tooltip location bottom 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="bottom"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat bJXssz"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="up"
          location="bottom"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa PKhYi"
            contentEditable={false}
            direction="up"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="bottom"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa PKhYi"
                contentEditable={false}
                direction="up"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="bottom"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa PKhYi Triangle__SVGView-bGJaTC cEBETu"
                  contentEditable={false}
                  direction="up"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="bottomLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="bottomLeft"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat ewUQFP"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="up"
          location="bottomLeft"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa cDNHfM"
            contentEditable={false}
            direction="up"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="bottomLeft"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa cDNHfM"
                contentEditable={false}
                direction="up"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="bottomLeft"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa cDNHfM Triangle__SVGView-bGJaTC cEBETu"
                  contentEditable={false}
                  direction="up"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="bottomRight"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="bottomRight"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat jBfSCh"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="up"
          location="bottomRight"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa iCwPCt"
            contentEditable={false}
            direction="up"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="bottomRight"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa iCwPCt"
                contentEditable={false}
                direction="up"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="bottomRight"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa iCwPCt Triangle__SVGView-bGJaTC cEBETu"
                  contentEditable={false}
                  direction="up"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location middle 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="middle"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="middle"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat ekRhkN"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="left"
          location="middle"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa dVzZpZ"
            contentEditable={false}
            direction="left"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="middle"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa dVzZpZ"
                contentEditable={false}
                direction="left"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="middle"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa dVzZpZ Triangle__SVGView-bGJaTC gJkCcI"
                  contentEditable={false}
                  direction="left"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="middleLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="middleLeft"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat iEIxrw"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="right"
          location="middleLeft"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa hsaQNN"
            contentEditable={false}
            direction="right"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="middleLeft"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa hsaQNN"
                contentEditable={false}
                direction="right"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="middleLeft"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa hsaQNN Triangle__SVGView-bGJaTC dVYvVI"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="middleRight"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="middleRight"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat ekRhkN"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="left"
          location="middleRight"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa dVzZpZ"
            contentEditable={false}
            direction="left"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="middleRight"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa dVzZpZ"
                contentEditable={false}
                direction="left"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="middleRight"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa dVzZpZ Triangle__SVGView-bGJaTC gJkCcI"
                  contentEditable={false}
                  direction="left"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="none"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat NDoKK"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="left"
          location="none"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa hkeXep"
            contentEditable={false}
            direction="left"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="none"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa hkeXep"
                contentEditable={false}
                direction="left"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="none"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa hkeXep Triangle__SVGView-bGJaTC gJkCcI"
                  contentEditable={false}
                  direction="left"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location top 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="top"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat NDoKK"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="down"
          location="top"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa hkeXep"
            contentEditable={false}
            direction="down"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="top"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa hkeXep"
                contentEditable={false}
                direction="down"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="top"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa hkeXep Triangle__SVGView-bGJaTC dPGEVM"
                  contentEditable={false}
                  direction="down"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location topLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="topLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="topLeft"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat jpLGFP"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="down"
          location="topLeft"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa jCeehl"
            contentEditable={false}
            direction="down"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="topLeft"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa jCeehl"
                contentEditable={false}
                direction="down"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="topLeft"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa jCeehl Triangle__SVGView-bGJaTC dPGEVM"
                  contentEditable={false}
                  direction="down"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location topRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="topRight"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Tooltip"
  padding=""
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="topRight"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
      visible={false}
      width="unset"
    >
      <div
        className="ui-tooltip sc-htpNat knovau"
        style={
          Object {
            "backgroundColor": "#708090",
            "color": "#ffffff",
          }
        }
        width="unset"
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "#708090",
              "color": "#ffffff",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "#708090",
                "color": "#ffffff",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="down"
          location="topRight"
          sizing="small"
          style={
            Object {
              "fill": "#708090",
              "stroke": "#708090",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa hySrsn"
            contentEditable={false}
            direction="down"
            disabled={false}
            errorMessage=""
            focus={false}
            height=""
            id=""
            left=""
            location="topRight"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Triangle"
            padding=""
            selected={false}
            sizing="small"
            style={
              Object {
                "fill": "#708090",
                "stroke": "#708090",
              }
            }
            testing={true}
            theme={null}
            tooltip=""
            top=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#c0c0c0",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "selectedBackgroundColor": "#1f8a70",
                  "selectedForegroundColor": "#ffe11a",
                  "tooltipBackgroundColor": "#708090",
                  "tooltipForegroundColor": "#ffffff",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa hySrsn"
                contentEditable={false}
                direction="down"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="topRight"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                padding=""
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="small"
                style={
                  Object {
                    "fill": "#708090",
                    "stokeWidth": "2px",
                    "stroke": "#708090",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa hySrsn Triangle__SVGView-bGJaTC dPGEVM"
                  contentEditable={false}
                  direction="down"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "#708090",
                      "stokeWidth": "2px",
                      "stroke": "#708090",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of a Tooltip control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tooltip test-class"
    location="middleRight"
    sizing="small"
    style={
      Object {
        "backgroundColor": "#708090",
        "color": "#ffffff",
      }
    }
    visible={false}
    width="unset"
  >
    <styled.span
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
    >
      [object Object]
    </styled.span>
    <Styled(Triangle)
      direction="left"
      location="middleRight"
      sizing="small"
      style={
        Object {
          "fill": "#708090",
          "stroke": "#708090",
        }
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a Tooltip 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tooltip"
    location="top"
    sizing="small"
    style={
      Object {
        "backgroundColor": "#708090",
        "color": "#ffffff",
      }
    }
    visible={false}
    width="unset"
  >
    <styled.span
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
    />
    <Styled(Triangle)
      direction="down"
      location="top"
      sizing="small"
      style={
        Object {
          "fill": "#708090",
          "stroke": "#708090",
        }
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test making a Tooltip invisible 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tooltip"
    location="top"
    sizing="small"
    style={
      Object {
        "backgroundColor": "#708090",
        "color": "#ffffff",
      }
    }
    visible={false}
    width="unset"
  >
    <styled.span
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
    />
    <Styled(Triangle)
      direction="down"
      location="top"
      sizing="small"
      style={
        Object {
          "fill": "#708090",
          "stroke": "#708090",
        }
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "top",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Tooltip",
  "padding": "",
  "parent": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "#708090",
    "color": "#ffffff",
  },
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
